<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="register"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_circle_left_24"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/connexion"
            android:textColor="@color/white"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/image_logo" />
        <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameApp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/dancing_bold"
                    android:textSize="36sp"/>
        -->
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/round_border"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:hint="@string/nom"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="5dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:drawableTint="@color/app_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:hint="@string/mot_de_passe"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon_color"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:drawableTint="@color/app_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/dm_medium"
        android:padding="20dp"
        android:text="@string/connexion"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/button_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/qst1"
            android:textColor="@color/black"
            android:fontFamily="@font/dm_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_medium"
            android:padding="5dp"
            android:onClick="register"
            android:text="@string/inscrire"
            android:textColor="@color/button_color"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

</RelativeLayout>